# plugin.HighOrder

SofaHighOrderFEM/: CMakeLists.txt  HighOrderMeshMatrixMass.h  HighOrderMeshMatrixMass.inl  HighOrderTetrahedralCorotationalFEMForceField.cpp  HighOrderTetrahedralCorotationalFEMForceField.h  HighOrderTetrahedralCorotationalFEMForceField.inl  HighOrderTetrahedralDiffusionForceField.cpp  HighOrderTetrahedralDiffusionForceField.inl  HighOrderTriangularCorotationalFEMForceField.inl  HighOrderTriangularDiffusionForceField.inl  SofaHighOrderFEMConfig.cmake.in
SofaHighOrderTopology/: Bezier2MeshMechanicalMapping.cpp  BezierTetrahedronSetGeometryAlgorithms.cpp  BezierTriangleSetGeometryAlgorithms.cpp  CMakeLists.txt  GenerateBezierCylinder.cpp  GenerateBezierCylinder.h  GenerateBezierSphere.cpp  GenerateBezierSphere.h  GenerateBezierSphere.inl  HighOrderTetra2HighOrderTriangleTopologicalMapping.cpp  HighOrderTetra2HighOrderTriangleTopologicalMapping.h  HighOrderTetrahedronSetTopologyContainer.cpp  HighOrderTetrahedronSetTopologyContainer.h  LagrangeTetrahedronSetGeometryAlgorithms.cpp  LagrangeTriangleSetGeometryAlgorithms.cpp  LagrangeTriangleSetGeometryAlgorithms.inl  Mesh2HighOrderTopologicalMapping.cpp  SofaHighOrderTopologyConfig.cmake.in  initHighOrderTopology.h
SofaHighOrderTopology/SofaHighOrderTopology_test/: BezierTetrahedronTopology_test.cpp
